Claude review fixes